--- a/style.css
+++ b/style.css
@@ -1,24 +1,43 @@
-
-body {
-    background-color: #e0d0c0;
-} 
-
-
-
-footer {
-    text-align: center;
-    color: #333;
-    /* font-size: 14px;
-    margin-top: 40px;  space above footer */
-  }
-
-/* Buttons */
-button {
-    background-color:#dfb0b0;
-    border-radius: 50px ;
+.nav-link {
+  color: #3d361ce1;
 }
 
-button:hover {
-    color:antiquewhite;
-    background-color: #3d361ce1;
+.nav-link:hover {
+  color: red;
+}
+
+.header {
+  background-color: #e0d0c0;
+}
+
+#title {
+  background-color: #e0d0c0;
+}
+
+#title svg {
+  display: block;
+  width: 100%;
+  height: 100px; /* prilagodi po želji */
+}
+
+.features {
+  background-color: #dfb0b0;
+}
+
+body {
+  color: #3d361ce1;
+  background-color: #dfb0b0;
+}
+
+/* Buttons */
+#myButton {
+  color: #3d361ce1;
+  background-color: #dfb0b0;
+  border-radius: 15px;
+  box-shadow: 6px 3px 5px #3d361ce1;
+}
+
+#myButton:hover {
+  color: antiquewhite;
+  background-color: #3d361ce1;
 }
